--- a/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
@@ -53,100 +53,29 @@ web.service.notification.application.name=OSGP
 tariffswitching.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
 tariffswitching.scheduling.job.resend.notification.maximum=3
 
-# --- JMS Settings ---
-jms.activemq.broker.url=failover:(ssl://localhost:61617)
-
-jms.default.initial.redelivery.delay=0
-jms.default.maximum.redeliveries=3
-jms.default.maximum.redelivery.delay=60000
-jms.default.redelivery.delay=10000
-
 # =========================================================
-# ===   JMS Settings: Tariff Switching Requests         ===
+# MESSAGING CONFIG
 # =========================================================
+#----------------------------------------------------------
+# jms.default
+#----------------------------------------------------------
+# jms.default.broker.url=failover:(ssl://localhost:61617)
+jms.default.broker.url=failover:(tcp://localhost:61616)
 
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.tariffswitching.requests.from.ws.to.domain
+#----------------------------------------------------------
 jms.tariffswitching.requests.queue=domain-tariffswitching.1_0.ws-tariffswitching.1_0.requests
 
-# --- DELIVERY OPTIONS ---
-#Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
-jms.tariffswitching.requests.explicit.qos.enabled=true
-#Set delivery persistent
-jms.tariffswitching.requests.delivery.persistent=true
-#Set Time to live in ms (300000 = 5 minutes)
-jms.tariffswitching.requests.time.to.live=3600000
-
-# --- CONCURRENT CONSUMERS ---
-jms.tariffswitching.requests.concurrent.consumers=2
-jms.tariffswitching.requests.max.concurrent.consumers=10
-
-# --- REDELIVERY POLICY ---
-jms.tariffswitching.requests.maximum.redeliveries=3
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.tariffswitching.requests.initial.redelivery.delay=60000
-# Set redelivery delay in ms (60000 = 1 min)
-jms.tariffswitching.requests.redelivery.delay=60000
-# Set maximum redelivery delay in ms (300000 = 5 min)
-jms.tariffswitching.requests.maximum.redelivery.delay=300000
-jms.tariffswitching.requests.back.off.multiplier=2
-jms.tariffswitching.requests.use.exponential.back.off=true
-
-
-# =========================================================
-# ===   JMS Settings: Tariff Switching Responses        ===
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.tariffswitching.responses.from.domain.to.ws
+#----------------------------------------------------------
 jms.tariffswitching.responses.queue=ws-tariffswitching.1_0.domain-tariffswitching.1_0.responses
 
-# --- DELIVERY OPTIONS ---
-jms.tariffswitching.responses.explicit.qos.enabled=true
-jms.tariffswitching.responses.delivery.persistent=true
-jms.tariffswitching.responses.time.to.live=3600000
-jms.tariffswitching.responses.receive.timeout=100
-
-# --- CONCURRENT CONSUMERS ---
-jms.tariffswitching.responses.concurrent.consumers=2
-jms.tariffswitching.responses.max.concurrent.consumers=10
-
-# --- REDELIVERY POLICY ---
-jms.tariffswitching.responses.maximum.redeliveries=3
-# Set redelivery delay in ms (60000 = 1 min)
-jms.tariffswitching.responses.initial.redelivery.delay=60000
-# Set redelivery delay in ms (60000 = 1 min)
-jms.tariffswitching.responses.redelivery.delay=60000
-# Set redelivery delay in ms (300000 = 5 min)
-jms.tariffswitching.responses.maximum.redelivery.delay=300000
-jms.tariffswitching.responses.back.off.multiplier=2
-jms.tariffswitching.responses.use.exponential.back.off=true
-
-
-# =========================================================
-# ===   JMS Settings: Common Logging                    ===
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.tariffswitching.requests.from.ws.to.logging
+#----------------------------------------------------------
 jms.tariffswitching.logging.queue=osgp.logging.ws
-
-# --- DELIVERY OPTIONS ---
-# Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
-jms.tariffswitching.logging.explicit.qos.enabled=true
-# Set delivery persistent
-jms.tariffswitching.logging.delivery.persistent=true
-# Set Time to live in ms (180000 = 3 minutes)
-jms.tariffswitching.logging.time.to.live=3600000
-
-# --- REDELIVERY POLICY ---
-jms.tariffswitching.logging.maximum.redeliveries=3
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.tariffswitching.logging.initial.redelivery.delay=60000
-# Set redelivery delay in ms (60000 = 1 min)
-jms.tariffswitching.logging.redelivery.delay=60000
-# Set maximum redelivery delay in ms (300000 = 5 min)
-jms.tariffswitching.logging.maximum.redelivery.delay=300000
-jms.tariffswitching.logging.back.off.multiplier=2
-jms.tariffswitching.logging.use.exponential.back.off=true
-
 
 # =========================================================
 # SCHEDULING CONFIG
