--- a/super/pom.xml
+++ b/super/pom.xml
@@ -96,7 +96,7 @@
     <logback.ext.version>0.1.5</logback.ext.version>
     <apache.commons.schema>2.2.4</apache.commons.schema>
     <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
-    <netty.version>3.10.6.Final</netty.version>
+    <netty.version>4.1.44.Final</netty.version>
     <openmuc.jdlms.version>1.6.0</openmuc.jdlms.version>
     <openmuc.openiec61850.version>1.6.0</openmuc.openiec61850.version>
     <openmuc.j60870.version>1.2.1</openmuc.j60870.version>
@@ -575,7 +575,7 @@
       <!-- Netty (TCP server) -->
       <dependency>
         <groupId>io.netty</groupId>
-        <artifactId>netty</artifactId>
+        <artifactId>netty-all</artifactId>
         <version>${netty.version}</version>
         <scope>compile</scope>
       </dependency>
