--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/pom.xml
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/pom.xml
@@ -172,6 +172,10 @@
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka-test</artifactId>
+    </dependency>
 
     <!-- Testing dependencies -->
     <dependency>
