--- a/super/pom.xml
+++ b/super/pom.xml
@@ -131,7 +131,8 @@
     <sun.httpserver.version>20070405</sun.httpserver.version>
     <postgresql.version>42.2.12</postgresql.version>
     <javax.xml.soap-api.version>1.4.0</javax.xml.soap-api.version>
-    <kafka.version>2.5.0</kafka.version>
+    <!-- to avoid conflicts with spring-kafka-test the older kafka version 2.4.1 is used-->
+    <kafka.version>2.4.1</kafka.version>
     <avro.version>1.9.2</avro.version>
     <spring.kafka.version>2.4.6.RELEASE</spring.kafka.version>
   </properties>
@@ -606,6 +607,12 @@
         <groupId>org.springframework.kafka</groupId>
         <artifactId>spring-kafka</artifactId>
         <version>${spring.kafka.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.kafka</groupId>
+        <artifactId>spring-kafka-test</artifactId>
+        <version>${spring.kafka.version}</version>
+        <scope>test</scope>
       </dependency>
 
       <!-- Apache ActiveMQ client -->
