--- a/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
@@ -82,6 +82,11 @@ jms.inbound.osgp.core.requests.queue=domain-distributionautomation.1_0.osgp-core
 jms.inbound.osgp.core.responses.queue=domain-distributionautomation.1_0.osgp-core.1_0.responses
 
 #----------------------------------------------------------
+# jms.inbound.kafka.requests
+#----------------------------------------------------------
+jms.inbound.kafka.requests.queue=domain-distributionautomation.1_0.kafka-distributionautomation.1_0.requests
+
+#----------------------------------------------------------
 # jms.inbound.ws.requests
 #----------------------------------------------------------
 jms.inbound.ws.requests.queue=domain-distributionautomation.1_0.ws-distributionautomation.1_0.requests
@@ -95,6 +100,11 @@ jms.outbound.osgp.core.requests.queue=osgp-core.1_0.domain-distributionautomatio
 # jms.outbound.osgp.core.responses
 #----------------------------------------------------------
 jms.outbound.osgp.core.responses.queue=osgp-core.1_0.domain-distributionautomation.1_0.responses
+
+#----------------------------------------------------------
+# jms.outbound.kafka.responses
+#----------------------------------------------------------
+jms.outbound.kafka.responses.queue=kafka-distributionautomation.1_0.domain-distributionautomation.1_0.responses
 
 #----------------------------------------------------------
 # jms.outbound.ws.responses
