--- a/osgp/platform/osgp-adapter-ws-tariffswitching/pom.xml
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/pom.xml
@@ -176,8 +176,8 @@
       <artifactId>logback-classic</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.logback-extensions</groupId>
-      <artifactId>logback-ext-spring</artifactId>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
     </dependency>
 
     <!-- Servlet API 3.0 -->
