--- a/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/pom.xml
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/pom.xml
@@ -196,8 +196,8 @@
       <artifactId>logback-classic</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.logback-extensions</groupId>
-      <artifactId>logback-ext-spring</artifactId>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
     </dependency>
 
     <dependency>
