--- a/integration-tests/cucumber-tests-platform-distributionautomation/pom.xml
+++ b/integration-tests/cucumber-tests-platform-distributionautomation/pom.xml
@@ -145,6 +145,12 @@
       <artifactId>osgp-protocol-simulator-iec60870</artifactId>
       <classifier>classes</classifier>
     </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-protocol-simulator-mqtt</artifactId>
+      <version>5.1.0-SNAPSHOT</version>
+      <classifier>classes</classifier>
+    </dependency>
 
   </dependencies>
 
