--- a/osgp/protocol-adapter-iec60870/osgp-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-iec60870/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-iec60870</artifactId>
-    <version>5.0.1-SNAPSHOT</version>
+    <version>5.0.1</version>
     <relativePath>../parent-pa-iec60870/pom.xml</relativePath>
   </parent>
 
