--- a/osgp/shared/osgp-ws-tariffswitching/pom.xml
+++ b/osgp/shared/osgp-ws-tariffswitching/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
-    <version>5.0.1-SNAPSHOT</version>
+    <version>5.0.1</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
 
