--- a/public-lighting-demo-app/web-demo-app/pom.xml
+++ b/public-lighting-demo-app/web-demo-app/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-os-webapps</artifactId>
-    <version>5.0.1-SNAPSHOT</version>
+    <version>5.0.1</version>
     <relativePath>../parent-os-webapps/pom.xml</relativePath>
   </parent>
 
