--- a/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
@@ -2,7 +2,7 @@
 
 soap.secret.resource=file:/etc/ssl/certs/secret.aes
 database.secret.resource=file:/etc/ssl/certs/secret.aes
-encryption.provider.type=HSM
+encryption.provider.type=JRE
 
 #Database Configuration
 #db.username=osp_admin
