FLEX-5395 ~ Adds configuration of IP addresses that may be duplicated
Upon device registration, the IP address of the registered device is
removed in the database for other devices where it is configured (with
the exception of the loopback address - localhost / 127.0.0.1).

These changes allow to either configure that such clean up should never
be performed (allowing multiple devices to share any network address),
or to configure a comma separated list of IP addresses or IP address
ranges that may be shared (for instance
"192.168.0.1,192.168.1.12-192.168.2.103" to allow sharing of 192.168.0.1
or any IP address from 192.168.1.12 to 192.168.2.103 inclusive).

--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -236,3 +236,24 @@ max.retry.count=3
 
 # The grid operator organisation.
 netmanagement.organisation=test-org
+
+
+# =========================================================
+# === NETWORK ADDRESS CLEANUP CONFIG                    ===
+# =========================================================
+
+# If device.network.address.cleanup.never is true, cleanup will not be
+# performed and all network addresses may be used with multiple devices.
+device.network.address.cleanup.never=false
+# If device.network.address.cleanup.never is false, ranges can be
+# configured for network addresses that may be shared between devices.
+# This allows to configure ranges of addresses of simulators which run
+# on different ports of the same host, as one example of a scenario this
+# could be used with.
+# Notice that there is no need to configure the loopback address (for
+# instance 127.0.0.1) as an exception, since this is always allowed as
+# the network address of multiple devices (assumed to be simulated for
+# the purpose of running tests on a machine).
+# This is a comma separated list of either literal IP addresses, or of
+# ranges with a from address and a to address separated by a dash (-).
+device.network.address.cleanup.duplicates.allowed=
