--- a/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-iec60870</artifactId>
-    <version>5.0.2-SNAPSHOT</version>
+    <version>5.0.2</version>
     <relativePath>../parent-pa-iec60870/pom.xml</relativePath>
   </parent>
 
