--- a/osgp/protocol-adapter-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/pom.xml
@@ -14,7 +14,7 @@
 
   <artifactId>protocol-adapter-iec60870</artifactId>
   <groupId>org.opensmartgridplatform</groupId>
-  <version>5.0.2-SNAPSHOT</version>
+  <version>5.0.2</version>
   <packaging>pom</packaging>
   <name>protocol-adapter-iec60870</name>
   <properties>
