--- a/osgp/shared/osgp-ws-publiclighting/pom.xml
+++ b/osgp/shared/osgp-ws-publiclighting/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
-    <version>5.0.2-SNAPSHOT</version>
+    <version>5.0.2</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
 
