--- a/public-lighting-demo-app/pom.xml
+++ b/public-lighting-demo-app/pom.xml
@@ -14,7 +14,7 @@
 
   <artifactId>os-webapps</artifactId>
   <groupId>org.opensmartgridplatform</groupId>
-  <version>5.0.2-SNAPSHOT</version>
+  <version>5.0.2</version>
   <packaging>pom</packaging>
 
   <properties>
