SLIM-2077-added-custom-exception-handling

--- a/osgp/platform/osgp-secret-management/src/main/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Security configuration
-
-soap.secret.resource=file:/etc/ssl/certs/secret.aes
+component.name=osgp-secret-management
 database.secret.resource=file:/etc/ssl/certs/secret.aes
+soap.secret.resource=file:/etc/ssl/certs/soap-secret.aes
 encryption.provider.type=HSM
 #Database Configuration
 #db.username=osp_admin
