--- a/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
@@ -1,9 +1,7 @@
 #Security configuration
-
-#soap.secret.resource=file:/etc/ssl/certs/secret.aes
-#database.secret.resource=file:src/integration-test/resoures/secret-mgmt-db.key
-soap.secret.resource=file:src/integration-test/resources/secret-mgmt-soap.key
+component.name=osgp-secret-management
 database.secret.resource=file:src/integration-test/resources/secret-mgmt-db.key
+soap.secret.resource=file:src/integration-test/resources/secret-mgmt-soap.key
 encryption.provider.type=JRE
 
 #Database Configuration
