--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/test/resources/osgp-adapter-kafka-distributionautomation-test.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/test/resources/osgp-adapter-kafka-distributionautomation-test.properties
@@ -7,6 +7,7 @@ distributionautomation.kafka.common.properties.prefix=distributionautomation.kaf
 distributionautomation.kafka.bootstrap.servers=localhost:9092
 
 distributionautomation.kafka.message.signing.enabled=true
+distributionautomation.kafka.message.signing.strip.headers=true
 distributionautomation.kafka.topic=da_monitoring
 distributionautomation.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 distributionautomation.kafka.producer.value.serializer=org.opensmartgridplatform.adapter.kafka.da.serialization.MessageSerializer
