--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -62,6 +62,10 @@ distributionautomation.kafka.message.signature.provider=SunRsaSign
 distributionautomation.kafka.message.signature.key.algorithm=RSA
 distributionautomation.kafka.message.signature.key.size=2048
 distributionautomation.kafka.message.signature.key.private=file:/etc/osp/kafka-message-signing/keys/message-signing-rsa-private.pem
+# To be able to integrate with other systems, a conversion of the private key may be required.
+# Converting a PKCS#1 key to PKCS#8 is possible using OpenSSL.
+#
+# openssl pkcs8 -topk8 -inform PEM -in <pkcs#1.pem> -out <pkcs#8.pem> -nocrypt
 
 # Example Kafka SSL configuration for use in acceptance or production environments
 #distributionautomation.kafka.security.protocol=SSL
