--- a/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/src/main/resources/application-light_measurement_device.properties
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/src/main/resources/application-light_measurement_device.properties
@@ -1,2 +1,5 @@
 general_interrogation_object_addresses=1,2,3,4
 general_interrogation_element_values=false,false,false,false
+
+job.asdu.generator.enabled=true
+job.asdu.generator.cron=0 0/1 * * * ?
