--- a/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/src/main/resources/application-default_controlled_station.properties
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/src/main/resources/application-default_controlled_station.properties
@@ -1,5 +1,5 @@
 general_interrogation_object_addresses=9127,9128
 general_interrogation_element_values=10.0,20.5
 
-#job.asdu.generator.enabled=true
-#job.asdu.generator.cron=0 0/1 * * * ?
+job.asdu.generator.enabled=false
+job.asdu.generator.cron=0 0/1 * * * ?
