--- a/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/src/main/resources/osgp-simulator-protocol-mqtt.properties
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/src/main/resources/osgp-simulator-protocol-mqtt.properties
@@ -9,12 +9,12 @@ mqtt.simulator.broker.port=1883
 
 mqtt.simulator.broker.ssl.port=8883
 mqtt.simulator.broker.ssl.provider=JDK
-#mqtt.simulator.broker.ssl.keystore.location=/etc/osp/keys/mqtt/mqtt.server.keystore.jks
-mqtt.simulator.broker.ssl.keystore.location=mqtt_server_keystore.jks
+#mqtt.simulator.broker.ssl.keystore.location=/etc/osp/keys/mqtt/mqtt_broker_keystore.jks
+mqtt.simulator.broker.ssl.keystore.location=mqtt_broker_keystore.jks
 mqtt.simulator.broker.ssl.keystore.password=123456
 mqtt.simulator.broker.ssl.keymanager.password=123456
 
-#mqtt.simulator.client.ssl.truststore.location=/etc/osp/keys/mqtt/mqtt.client.truststore.jks
+#mqtt.simulator.client.ssl.truststore.location=/etc/osp/keys/mqtt/mqtt_client_truststore.jks
 mqtt.simulator.client.ssl.truststore.location=mqtt_client_truststore.jks
 mqtt.simulator.client.ssl.truststore.password=123456
 mqtt.simulator.client.ssl.truststore.type=JKS
